# GoldEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AssetProcessor/: CmakeLists.txt
AssetProcessor/src/: AssetProcessor.cpp  AssetProcessor.h  main.cpp
Dependencies/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Engine/: CMakeLists.txt
Engine/src/core/: Application.cpp  Application.h  Asserts.h  Core.h  EntryPoint.cpp  Input.cpp  Input.h  Logging.cpp  Logging.h  Singletons.cpp  Singletons.h  Types.h  Util.cpp  Util.h
Engine/src/graphics/: FrameDecoder.cpp  FrameDecoder.h  FrameEncoder.cpp  FrameEncoder.h  FrustumCuller.h  Material.h  MaterialManager.h  RenderCommands.h  RenderResources.h  RenderTypes.cpp  RenderTypes.h  Renderer.cpp  Renderer.h  Renderer_GL.cpp  Renderer_GL.h  ShaderCompiler.cpp  ShaderCompiler.h  Texture.cpp  Texture.h  Vertex.h
Engine/src/memory/: Allocator.cpp  Allocator.h  BinaryReader.h  BinaryWriter.h  DoubleBuffered.h  FreeListAllocator.cpp  FreeListAllocator.h  LinearAllocator.cpp  LinearAllocator.h  MemorySystem.cpp  MemorySystem.h  STLAdapter.h  STLAllocator.h  StackAllocator.cpp  StackAllocator.h  Utils.h
Engine/src/platform/: Platform.h  Platform_SDL.cpp  Platform_SDL.h
Engine/src/scene/: BaseComponents.h  Camera.h  GameObject.cpp  GameObject.h  GameSystem.h  SceneGraph.cpp  SceneGraph.h  SceneLoader.cpp  SceneLoader.h
Engine/src/ui/: EditorUI.cpp  EditorUI.h  ImGuiWindow.cpp  ImGuiWindow.h  LogWindow.h  PerformanceWindow.h  PropertyWindow.cpp  PropertyWindow.h  SceneWindow.cpp  SceneWindow.h  ViewportWindow.h
Sponza/: CMakeLists.txt
Sponza/Assets/: imgui.ini
Sponza/Assets/shaders/: default.frag.glsl  default.vert.glsl  gbuffer_fill.frag.glsl  gbuffer_fill.vert.glsl  gbuffer_resolve.frag.glsl  shadow.frag.glsl  shadow.vert.glsl  skybox.vert.glsl  tonemap.frag.glsl  voxel_clear.comp.glsl  voxel_downsample.comp.glsl  voxel_visualize.frag.glsl  voxelize.frag.glsl  voxelize.geom.glsl  voxelize.vert.glsl
Sponza/Assets/shaders/common/: common.glslh  direct_lighting.glslh  indirect_lighting.glslh  material_sampling.glslh  uniforms.glslh
Sponza/src/: Components.cpp  Components.h  LightingSystem.h  RenderSystem.cpp  RenderSystem.h  RenderingToggles.h  ShadowMapService.cpp  ShadowMapService.h  main.cpp
Sponza/src/rendering/: LightBinning.cpp  LightBinning.h
Test/: CMakeLists.txt  RenderSystem.h  main.cpp
Test/Assets/: imgui.ini
Test/Assets/shaders/: default.frag.glsl  default.vert.glsl  gbuffer_fill.frag.glsl  gbuffer_fill.vert.glsl  gbuffer_resolve.frag.glsl  gbuffer_resolve.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  tonemap.frag.glsl  tonemap.vert.glsl
Test/src/: Camera.h  Components.cpp  Components.h  DebugCameraSystem.h  LightingSystem.h  RenderSystem.cpp  RenderSystem.h  ShadowMapService.cpp  ShadowMapService.h  main.cpp
VulkanSandbox/: CMakeLists.txt
